Version 5.2.0
Changed
- Changed method parameters `captureCheckout($orderId, array $items = [])`
- Changed method parameters `refundCheckout($orderId, array $items = [])`
- Changed method parameters `captureInvoice($orderId, array $items = [])`

Version 5.1.0
Changed
- Fix User Agent string
- Update sdk

Version 5.0.1
Changed
- Fix order lines of full refund

Version 5.0.0
Added
- Implemented Adapter::processTransactionObject() method to handle capture/cancel/refund actions
- WC Adapter: add wp filter `swedbank_pay_transaction_object`

Version 4.2.0
Added
- Add RestrictedToInstruments

Changed
- Fix `setPayeeReference()`
- Fix `setVatAmount()`

Version 4.1.1
Changed
- Add details of failed transactions

Version 4.1.0
Added
- Partial capture and refund
- Added `createCreditMemo()` method
- Subscriptions: add payment meta and tokens from parent order

Changed
- Improved `processTransaction()` method
- Code optimization

Version 4.0.4
Added
- `Problem` class
- `getProblem()` method in `Transaction` class

Changed
- Prevent order cancellation if have failed transaction
- Improved order notes
- Fixed stock reducing on authorization

Version 4.0.3
Changed
- Fixed order status update in `updateOrderStatus()`
- Fixed token saving in `savePaymentToken()`
- Logs clean up

Version 4.0.2
Changed
- Fixed order actions of the checkout
- Fixed: Uncaught Error: Call to a member function getReference() on array

Version 4.0.1
Changed
- Fixed CC types options

Version 4.0.0
Added
- Update Credit card and Checkout methods: use objects from sdk library
- Add debug logging
- Filters for product classes
- Additional filters

Changed
- Fix Swish description
- Refund fixes of Checkout
- Fix transaction id
- Update tests

Version 3.1.0
* Implemented `paymentUrl` feature
* Update `initiateConsumerSession()` method

Version 3.0.1
* Add InitiatingSystemUserAgent
* Ignore verifications which have failed transaction state
* Rename `getPanEnrolled` to `isPanEnrolled()`